# marketplace-sync

./: .gitignore  README.md  action.yml  pyproject.toml
.github/workflows/: test.yml
generate/: action.yml
src/marketplace_sync/: __init__.py
tests/: test_sync.py
tests/fixtures/marketplace/.claude-plugin/: marketplace.json
tests/fixtures/marketplace/plugins/bar/.claude-plugin/: plugin.json
tests/fixtures/marketplace/plugins/bar/skills/bar-skill/: SKILL.md  reference.md
tests/fixtures/marketplace/plugins/foo/.claude-plugin/: plugin.json
tests/fixtures/marketplace/plugins/foo/skills/foo-skill/: SKILL.md
tests/fixtures/root-source-marketplace/: LICENSE  settings.json
tests/fixtures/root-source-marketplace/.claude-plugin/: marketplace.json  plugin.json
tests/fixtures/root-source-marketplace/agents/: helper.md
tests/fixtures/root-source-marketplace/commands/: review.md
tests/fixtures/root-source-marketplace/skills/my-skill/: SKILL.md
tests/fixtures/skills-marketplace/: README.md
tests/fixtures/skills-marketplace/.claude-plugin/: marketplace.json
tests/fixtures/skills-marketplace/skills/alpha/: SKILL.md
tests/fixtures/skills-marketplace/skills/beta/: SKILL.md
